Cambiado los audios por youtube en Nitroglycerin Powered

--- a/music.html
+++ b/music.html
@@ -246,9 +246,9 @@
 
 				<h3>Nitroglicerin Powered - 6/1/2026</h3>
 
-				<audio controls>
-					<source src="audio/Nitroglicerin_Powered.mp3", type="audio/mpeg">
-				</audio>
+				<div class="youtube-video-container">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/cP5-jJK_wrQ?si=67HqamfxMiBytPPH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				</div>
 
 				<p>
 					In a complete burnout of absoultly everything, i made this theme on a Nintendo DS Lite from 2006, trying to shake off the burnout and creative block.
