--- a/music_es.html
+++ b/music_es.html
@@ -236,10 +236,10 @@
 				</p>
 
 				<h3>Nitroglicerin Powered - 6/1/2026</h3>
-
-				<audio controls>
-					<source src="audio/Nitroglicerin_Powered.mp3", type="audio/mpeg">
-				</audio>
+				
+				<div class="youtube-video-container">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/cP5-jJK_wrQ?si=67HqamfxMiBytPPH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				</div>
 
 				<p>
 					En medio de un completo burnout de absolutamente todo, hice este tema en un Nintendo DS Lite del 2006, a ver si puedo sacarme el burnout.
